@@ -63,7 +63,12 @@ size_t SkImageInfo::computeByteSize(size_t rowBytes) const {
     SkSafeMath safe;
     size_t bytes = safe.add(safe.mul(safe.addInt(this->height(), -1), rowBytes),
                             safe.mul(this->width(), this->bytesPerPixel()));
-    return safe.ok() ? bytes : SIZE_MAX;
+
+    // The CPU backend implements some memory operations on images using instructions that take a
+    // signed 32-bit offset from the base. If we ever make an image larger than that, overflow can
+    // cause us to read/write memory that starts 2GB *before* the buffer. (crbug.com/1264705)
+    constexpr size_t kMaxSigned32BitSize = SK_MaxS32;
+    return (safe.ok() && (bytes <= kMaxSigned32BitSize)) ? bytes : SIZE_MAX;
 }
 
 SkImageInfo SkImageInfo::MakeS32(int width, int height, SkAlphaType at) {
